# discord-bot

./: .buildpack  .buildpacks  .dockerignore  .gitignore  .main.py.swp  Dockerfile  Makefile  Pipfile  Procfile  README.md  __main__.py  basic.py  build.sh  discordbotofmarcpartensky.pem  docker-compose.yml  entrypoint.sh  infos.txt  main.py  pyproject.toml  requirements.txt  requirements2.txt  run  run.sh
.github/workflows/: docker-push.yml  docker-test.yml
cogs/: admin.py  advertisement.py  api.py  bank.py  basic.py  blackjack.py  casino.py  code.py  commandes.py  connect4.py  countdown.py  debug.py  docker.py  farm.py  game.py  git.py  groq.py  ialab.py  jail.py  junior.py  leaderboard.py  leekwars.py  marc.py  memory.py  messenger.py  mongo.py  music.py  music2.test  music5.test  musicmarc.py  planning.py  playlist.py  quest.py  quiz.py  role.dev  role.py  shell.py  sherlock.py  shop.py  sounddeck.py  (+10 more)
config/: config.py  credentials.example  credentials.py  embed.py  emoji.py  errors.py  marc_store.yml  shops.py
config/emoji/: farm.py
database/: answers.db  bank.db
discord_bot/: __main__.py
discord_bot/cogs/: admin.py  advertisement.py  api.py  backup.py  bank.py  basic.py  blackjack.py  casino.py  code.py  commandes.py  connect4.py  countdown.py  debug.py  docker.py  farm.py  game.py  git.py  groq.py  ialab.py  jail.py  junior.py  leaderboard.py  leekwars.py  library.py  marc.py  messenger.py  mongo.py  mongo2.deprecated  music.py  music2.test  music3.test  music4.test  music5.test  musicmarc.py  planning.py  playlist.py  quest.py  quiz.py  record.py  role.py  (+13 more)
discord_bot/config/: credentials.py  emoji.py  shops.py
discord_bot/models/: connect4.py  (+7 more)
models/: blackjack.py  cluster.py  connect4.py  database.py  field.py  leekwars.py  messenger.py  mongo.py  mongocollection.py  mongocollection2.py  playlist.py  quiz.py  room.py  terminal.py  user.py
tests/: audio_recording.py  audio_recording_merged.py  bank_old.test  database-test.py  music3.test
utils/: access.py  check.py  date.py  html_parser.py  shop.py  tools.py
(+21 files in other folders)
