[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.13"
# requires-python = "==3.12"
dependencies = [
    "beautifulsoup4",
    "fbchat",
    "nightcore",
    "progressbar2",
    "pymongo",
    "requests",
    "rich",
    "translate",
    "wikipedia",
    "wolframalpha",
    "html2text",
    "gtts==2.2.1",
    "pillow",
    "pygithub",
    "pyyaml",
    "youtube-dl",
    "python-dotenv",
    "dpy-http-server",
    "pexpect",
    "dnspython",
    "requests-futures",
    "torrequest",
    "unidecode",
    "future",
    "selenium",
    "fake-useragent",
    "colorama",
    "groq==0.9.0",
    "websockets==12.0",
    "py-cord[voice]==2.5.0",
    "psycopg2-binary",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["discord_bot"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.380",
]
